/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package barcaNellaVasca;
import javafx.scene.shape.Box;
import processing.core.PApplet;

import java.awt.*;
/**
 *
 * @author Rairokul
 */
public class Vasca {
    private Acqua acqua;
    private int barca;
    private int profondita;
    private DatiCondivisi d;
    
    void aggiornaDistribuzione(float x, float y){
        
    }
    void aggiornaPosBarca(Barca barca, float newX, float newY){
        
    }
    
    void draw(){
        
    }
}
